# routers/userRouter.js
@@ -47,9 +47,8 @@ router.post('/website',jwt.verifyToken,jwt.verify,upload.single('logo'),(req,res
 })
 
 router.put('/editSite',jwt.verifyToken,jwt.verify,(req,res)=>{
-    console.log('In edit')
-    console.log('IN EDIT----',req.params)
-    //controller.Site(req.body,res)
+    //console.log('IN EDIT----',req.body)
+    controller.Site(req.body,res)
 })
 
 router.get('/getpreview',jwt.verifyToken,jwt.verify,(req,res)=>{
